<resources>
    <string name="app_name">ToDoApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_task_to_done">Set task to done</string>
    <string name="title_activity_edit_task">edit_task_activity</string>
    <string name="edit_task">Edit task</string>
    <string name="pick_date">Pick date</string>
    <string name="category">Category*</string>
    <string name="description">Description*</string>
    <string name="title">Title*</string>
    <string name="notification">Notification</string>
    <string name="add_task">Add Task</string>
    <string name="attach_file">Attach File</string>
    <string name="title_activity_single_task_info">SingleTaskInfoActivity</string>
    <string name="status">status</string>
    <string name="delete_task">Delete task</string>
    <string name="attachments">Attachments:</string>
    <string name="channel_name">task_channel\n</string>
    <string name="channel_description">task_message</string>
    <string name="no_attachments">No attachments</string>
    <string name="choose_when_should_notifications_pop_up">Choose when should notifications pop up:</string>
    <string name="pick_time">Pick time</string>
    <string name="attachment_in_the_task">Attachment in the task</string>
    <string name="settings">Settings</string>
    <string name="search_for_a_task">Search for a task</string>
    <string name="new_old">new/old</string>
</resources>