<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        style="@style/TextInfo"
        android:layout_marginTop="50dp"
        android:layout_weight="0.15"/>

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInfo"
        android:text=""
        android:layout_weight="0.15" />

    <TextView
        android:id="@+id/descriptionText"
        style="@style/TextInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="0.15" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInfo"
        android:text=""
        android:layout_weight="0.15"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1">

        <Switch
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/notification"
            style="@style/TextInfo"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <CheckBox
            android:id="@+id/statusCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            style="@style/TextInfo"
            android:text="@string/status" />
    </LinearLayout>

    <TextView
        android:id="@+id/attachmentsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInfo"
        android:text="@string/attachments"
        android:layout_weight="0.1"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachmentsRecyclerViewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>

    <Button
        android:id="@+id/editButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInfo"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:text="@string/edit_task"
        android:layout_weight="0.03"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        style="@style/TextInfo"
        android:text="@string/delete_task"
        android:textColor="@color/white"
        android:layout_weight="0.03"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>
</LinearLayout>